projetGL/src/test/deca/syntax/invalid/ourTests/test_commentaire_imbrique.deca
{
    /* Un commentaire multi-lignes
       /* imbriqué, ce qui est invalide en Java */
       int x = 6;
    */
    int y = 7;
}
